fix (breadcrumb/seo-description): spacing and text align

--- a/styles/css/breadcrumb/vtex.breadcrumb.css
+++ b/styles/css/breadcrumb/vtex.breadcrumb.css
@@ -31,5 +31,5 @@
 }
 
 :global(.vtex-flex-layout-0-x-flexRowContent--general__results--breadcrumb) .container {
-    margin-left: 0px;
+    margin: 10px 0px;
 }
